--- a/style.css
+++ b/style.css
@@ -129,41 +129,32 @@ main .main-button button:hover {
     color: #222;
     background-color: #f8f8f8;
 }
-.footer-up {
+footer {
+  display: flex;
+  flex-direction: column;
+  height: 90px;
+  background-color: #171717;
+  justify-content: end;
+}
+footer section {
+    padding: 0 30px;
     display: flex;
-    width: 100%;
-    height: 50px;
-    position: absolute;
-    color: #5f6368;
-    font-size: 15px;
-    
+    align-items: center;
+    height: 50%;
+    color: #999da2;
+}
+footer .pies {
+    border-top: #3b3b3b solid 1px;
+    display: flex;
+    justify-content: space-between;
+}
+footer section.pies ul {
+    display: flex;
+    gap: 18px;
+}
+footer .pies ul li {
+    color: #999;
+    text-decoration: none;
 }
 
-footer {
-    width: 100%;
-    height: 50px;
-    position: absolute;
-    bottom: 0;
-    display: grid;
-    grid-template-columns:1fr 1fr;
-    align-items: center;
-    font-size: 13px;
-    background-color: #f2f2f2;
-    border-top: 1px solid #e4e4e4;
-}
-footer ul {
-    margin: 10px;
-    list-style: none;
-    display: flex;
-    padding-left: 0;
-}
-footer .footer-left {
-    justify-self: left;
-}
-footer .footer-right {
-    justify-self: right;
-}
-footer ul li a {
-    margin: 10px;
-    color: #5f6368;
-}
+
